add web tips chapter

--- a/guess/templates/guess3.html
+++ b/guess/templates/guess3.html
@@ -2,6 +2,7 @@
 <meta name="viewport" content="width=device-width">
 <html> 
     <head> 
+        <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
         <script> 
 var overall_max_value = {{ max_value }};
 var max_value = overall_max_value;
@@ -107,7 +108,7 @@ function solve() {
         </form> 
 
         <p id="paragraph"></p>
-        <table id="hiscore" border="1">
+        <table id="hiscore" border="1" class="pure-table">
             <tr>
                 <td>Position</td>
                 <td>Date</td>
