--- a/guess/templates/guess_start.html
+++ b/guess/templates/guess_start.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width">
 <html> 
+    <head>
+        <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
+    </head>
     <body> 
-        <form action="/guess/" method="get"> 
-            What's your name? <input type="text" name="user" value="User"> <br/>
-            What should the maximum number be? <input type="text" name="max_value" value="25"> <br/>
-            <input type="submit" value="Play!"> <br/>
-        </form> 
+        <fieldset>
+            <legend>Guessing game</legend>
+            <form action="/guess/" method="get" class="pure-form"> 
+                What's your name? <input type="text" name="user" value="User">
+                What should the maximum number be? <input type="text" name="max_value" value="25">
+                <button type="submit" class="pure-button pure-button-primary"> Play!
+            </form> 
+        </fieldset>
     </body> 
 </html> 
 
