minor tweaks; update license

--- a/material/flask/templates/radio.html
+++ b/material/flask/templates/radio.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width">
-<html>
+<html lang="en">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Radio</title>
     <form method="post">
-        <input type="submit" name="submit" value="Start"></br>
+        <input type="submit" name="submit" value="Start"><br />
         <input type="submit" name="submit" value="Stop">
     </form>
 </html>
