--- a/material/guess/templates/guess3.html
+++ b/material/guess/templates/guess3.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width">
-<html> 
+<html lang="en"> 
     <head> 
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
+        <title>Guessing game</title>
         <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
         <script> 
 var overall_max_value = {{ max_value }};
