--- a/material/guess/templates/guess_start.html
+++ b/material/guess/templates/guess_start.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width">
-<html> 
+<html lang="en"> 
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
+        <title>Guessing game</title>
     </head>
     <body> 
         <fieldset>
             <legend>Guessing game</legend>
             <form action="/guess/" method="get" class="pure-form"> 
-                What's your name? <input type="text" name="user" value="User">
-                What should the maximum number be? <input type="text" name="max_value" value="25">
-                <button type="submit" class="pure-button pure-button-primary"> Play!
+                What's your name? <input type="text" name="user" value="User"/>
+                What should the maximum number be? <input type="text" name="max_value" value="25"/>
+                <button type="submit" class="pure-button pure-button-primary"> Play!</button>
             </form> 
         </fieldset>
     </body> 
