--- a/material/retail/templates/orders.html
+++ b/material/retail/templates/orders.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width">
-<html> 
-    <head><title>Orders</title></head>
+<html lang="en"> 
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
+        <title>Orders</title>
+    </head>
     <body> 
         <p>
         List of all orders
