--- a/material/retail/templates/products.html
+++ b/material/retail/templates/products.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width">
-<html> 
-    <head><title>Products</title></head>
+<html lang="en"> 
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
+        <title>Products</title>
+    </head>
     <body> 
         <p>
         List of all products
