more clarity on int_web

--- a/material/guess/templates/guess_start.html
+++ b/material/guess/templates/guess_start.html
@@ -10,8 +10,8 @@
         <fieldset>
             <legend>Guessing game</legend>
             <form action="/guess/" method="get" class="pure-form"> 
-                What's your name? <input type="text" name="user" value="User"/>
-                What should the maximum number be? <input type="text" name="max_value" value="25"/>
+                What's your name? <input type="text" name="user" value="User"/><br/>
+                What should the maximum number be? <input type="text" name="max_value" value="25"/><br/>
                 <button type="submit" class="pure-button pure-button-primary"> Play!</button>
             </form> 
         </fieldset>
